--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,23 +17,11 @@ services:
           target: /app
           action: sync+restart
 
-  # database:
-  #   image: postgres:14
-  #   volumes:
-  #     - postgres:/var/lib/postgresql/data
-  #   environment:
-  #     POSTGRES_PASSWORD: password
-
-  # frontend:
-  #   image: node:18-alpine
-  #   command: sh -c "yarn install && yarn run dev"
-  #   working_dir: '/app'
-  #   volumes:
-  #     - ./frontend:/app
-  #     - ./frontend/node_modules:/app/node_modules
-  #   ports:
-  #     - 3000:3000
-
-# volumes:
-#   postgres:
-#   gems:
+  frontend:
+    image: oven/bun:1
+    working_dir: '/app'
+    command: sh -c "bun install && bun run dev"
+    volumes:
+      - ./frontend:/app
+    ports:
+      - 3000:3000
