--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,17 @@
 services:
+  localstack:
+    image: localstack/localstack:latest
+    ports:
+      - "4566:4566"  # Edge port for all services
+      - "4571:4571"  # Optional: external API
+    environment:
+      - SERVICES=iam,s3,stepfunctions,dynamodb,lambda
+      - DEFAULT_REGION=us-east-1
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    volumes:
+      - localstack_data:/var/lib/localstack
+      - /var/run/docker.sock:/var/run/docker.sock
+
   database:
     image: postgres
     volumes:
@@ -29,6 +42,9 @@ services:
           action: sync+restart
     depends_on:
       - database
+      - localstack
+    environment:
+      - IS_LOCAL=true
 
   frontend:
     image: oven/bun:1
@@ -41,3 +57,4 @@ services:
 
 volumes:
   postgres:
+  localstack_data:
